# llm_router

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LM_STUDIO_USAGE.md  MANIFEST.in  README.md  STREAMING_PROGRESS_SUMMARY.md  aihubmix.config.toml  aihubmix.json  codex.config.example.toml  example_parser.py  llm_router.config.toml  llm_router.json  pyproject.toml  router.toml  test_mcp_alignment.py  test_prompt.py
docs/: README.md  architecture.md  codex-profile-catalog.md  codex-runtime-rules.md  future.md  provider-adapters.md  testing.md
llm_router/: __init__.py  chat_adapter_base.py  cli.py  codex_presets.py  codex_recovery.py  config.py  debug_log.py  llm_client.py  mcp_converter.py  model_config.py  openai_chat.py  provider_errors.py  quotes.json  reasoning_summary.py  server.py  session_store.py
llm_router/deepseek/: __init__.py  anthropic_web_search.py  chat.py
llm_router/mirothinker/: __init__.py  mcp.py
llm_router/parser/: __init__.py  base.py  errors.py  json_parser.py  validator.py  xml_parser.py
llm_router/responses_state/: __init__.py  events.py  state.py  storage.py  tools.py  usage.py  validation.py
llm_router/windows/: __init__.py  config.py  dashboard.py  server_manager.py  tray.py  updater.py
llm_router/xiaomi/: __init__.py  chat.py
scripts/: setup.ps1
tests/: conftest.py  test_chat_completions.py  test_cli.py  test_codex_presets.py  test_config.py  test_debug_log.py  test_deepseek_adapter.py  test_deepseek_anthropic_web_search.py  test_default_params.py  test_integration.py  test_json_parser.py  test_mcp_converter.py  test_mirothinker_adapter.py  test_model_catalog.py  test_parser_base.py  test_parser_errors.py  test_parser_integration.py  test_reasoning_summary.py  test_schema_validation.py  test_server_responses.py  test_session_store.py  test_thread_safety.py  test_timeout.py  test_validator.py  test_xiaomi_adapter.py  test_xml_parser.py
(+12 files in other folders)
